# learningCUDA

./: .gitignore  CMakeLists.txt
Histogram/: CMakeLists.txt  Makefile  histogram.cu  plot.py  plot.sh
MatrixSum/: CMakeLists.txt  Makefile  matSum.cu  mat_sum.cu
Matrix_multiplication/: CMakeLists.txt  Makefile  compare.sh  mat_mult.cu  rectangular.cu  shared_mat_mult.cu
Parallel_vector_addition/: CMakeLists.txt  Makefile  compare.sh  templated_vec_add.cu  vec_add.cc  vec_add.cu  vec_add_blocks.cu  vec_add_blocksandthreads.cu  vec_add_manyblocks.cu  vec_add_threads.cu
PinnedMemory/: comparison.cu  get_data.py
ReverseVec/: CMakeLists.txt  Makefile  compare.sh  reverse.cu  sharedReverse.cu
SharedMemory/SharedReverseVec/: compare.sh  sharedReverse.cu
Sum_n_cubes/: sumCubes.cu
